--- a/core/style.css
+++ b/core/style.css
@@ -81,11 +81,11 @@ body, select, input, textarea {
 }
 
 /* put in strange text stroke for AA in chrome */
-h1,h2,h3,h4,h5,h6 { -webkit-text-stroke: 1px transparent; font-weight: bold; font-family: Garamond, Georgia, serif; }
+h1 { -webkit-text-stroke: 1px transparent; font-weight: bold; font-family: Helvetica, Arial, Verdana, sans-serif; text-shadow: 0px 1px 2px #eee;}
+h1,h2,h3,h4,h5,h6 { -webkit-text-stroke: 1px transparent; font-weight: bold; font-family: Helvetica, Arial, Verdana, sans-serif; }
 h1 a, h1 a:active, h1 a:visited, h2 a, h2 a:active, h2 a:visited { color: #444; }
 h1 a:hover, h2 a:hover { color: #f0b02a; }
-/* h1 { font-size: 68px; line-height: 72px; letter-spacing: -1px; color: #f0b02a; text-transform: uppercase; } */
-h1 { font-size: 42px; line-height: 48px; letter-spacing: -1px; color: #f0b02a; text-transform: uppercase; }
+h1 { font-size: 48px; line-height: 56px; letter-spacing: -1px; color: #444; text-transform: capitalize; }
 h2 { font-size: 42px; line-height: 48px; letter-spacing: -1px; color: #444; text-transform: uppercase; }
 h3 { font: 26px/36px "helvetica neue", Helvetica, Arial, Verdana, sans-serif; color: #444;}
 
@@ -505,6 +505,39 @@ button {  width: auto; overflow: visible; }
 	/* #footer .ui-icon:hover { background-image: url(/images/ui-icons_f0b02a_256x240.png); } */
 
     /* BUTTONS, BUTTONS, BUTTONS! */
+	    .ctabutton {
+	   border-top: 1px solid #c7f9b4;
+	   background: #4dea10;
+	   background: -webkit-gradient(linear, left top, left bottom, from(#91f569), to(#4dea10));
+	   background: -webkit-linear-gradient(top, #91f569, #4dea10);
+	   background: -moz-linear-gradient(top, #91f569, #4dea10);
+	   background: -ms-linear-gradient(top, #91f569, #4dea10);
+	   background: -o-linear-gradient(top, #91f569, #4dea10);
+	   padding: 25px 40px 29px 40px;
+	   -webkit-border-radius: 12px;
+	   -moz-border-radius: 12px;
+	   border-radius: 12px;
+	   -webkit-box-shadow: rgba(0,0,0,1) 0 2px 2px;
+	   -moz-box-shadow: rgba(0,0,0,.4) 0 2px 2px;
+	   box-shadow: rgba(0,0,0,.4) 0 2px 2px;
+	   text-shadow: rgba(0,0,0,.2) 0 2px 1px;
+	   color: white;
+	   font-size: 38px;
+	   font-family: Helvetica, Arial, Sans-Serif;
+	   font-weight: bold;
+	   text-decoration: none;
+	   vertical-align: middle;
+	   /* display: inline-block;*/
+	   width: 195px;
+	   }
+	   
+	.ctabutton:hover {
+	   border-top-color: #69f700;
+	   background: #5ede00;
+	   color: #f6ffee;
+	   }
+   
+    
     a.dribbble { display: block; }
     
     a.dribbble, .dribbble {
@@ -716,7 +749,7 @@ body { background: transparent url('/images/PU_int_watertile.png') bottom left s
     display: inline-block;
     font: 40px/57px Arial, "helvetica neue", Helvetica, Verdana, sans-serif;
     color: #003B74;
-    text-transform: uppercase;
+    text-transform: capitalize;
     text-shadow: 0px 1px 1px #DDD;
     -webkit-text-stroke: 1px transparent;
     padding-left: 52px;
