--- a/core/style.css
+++ b/core/style.css
@@ -529,13 +529,40 @@ button {  width: auto; overflow: visible; }
       vertical-align: middle;
       display: inline-block;
       margin-bottom: 5px;
-      width: 195px;
+      width: 210px;
 	  }
-	  a.ctabutton { color: #FFF; }
-	  .ctabutton:hover {
+	  .ctabutton2 {
+      border-top: 1px solid #c7f9b4;
+      background: #4dea10;
+      background: -webkit-gradient(linear, left top, left bottom, from(#91f569), to(#4dea10));
+      background: -webkit-linear-gradient(top, #91f569, #4dea10);
+      background: -moz-linear-gradient(top, #91f569, #4dea10);
+      background: -ms-linear-gradient(top, #91f569, #4dea10);
+      background: -o-linear-gradient(top, #91f569, #4dea10);
+      padding: 15px 30px 19px 30px;
+      -webkit-border-radius: 8px;
+      -moz-border-radius: 8px;
+      border-radius: 8px;
+      -webkit-box-shadow: rgba(0,0,0,1) 0 2px 2px;
+      -moz-box-shadow: rgba(0,0,0,.4) 0 2px 2px;
+      box-shadow: rgba(0,0,0,.4) 0 2px 2px;
+      text-shadow: rgba(0,0,0,.2) 0 2px 1px;
+      color: white;
+      font-size: 24px;
+      font-family: Helvetica, Arial, Sans-Serif;
+      font-weight: bold;
+      text-decoration: none;
+      vertical-align: middle;
+      display: inline-block;
+      margin-bottom: 5px;
+      width: 180px;
+      text-align: center;
+	  }
+	  a.ctabutton, a.ctabutton2 { color: #FFF !important; }
+	  .ctabutton:hover, .ctabutton2:hover {
 	     border-top-color: #69f700;
 	     background: #5ede00;
-	     color: #f6ffee;
+	     color: #f6ffee !important;
 	     cursor: pointer;
 	   }
    
